<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>open_manipulator_x_tof</name>
  <version>2.2.0</version>
  <description>
    ROS 2 package for open_manipulator_x_tof demo.
  </description>
  <maintainer email="pablogarrido@eprosima.com">Pablo Garrido</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>open_manipulator_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  <depend>urdf</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
